[gd_scene load_steps=3 format=3 uid="uid://b208u01vovphw"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_e50my"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts50w"]
bg_color = Color(0.501961, 0.419608, 0.564706, 1)

[node name="GameOver" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ts50w")
script = ExtResource("1_e50my")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 360)
ignore_rotation = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Oops you died!"

[node name="MenuButtonContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Retry Level"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/MenuButtonContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Return to Main Menu"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/RetryButton" to="." method="_on_retry_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButtonContainer/CenterContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
